# NumChat

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/app/: app.py
src/core/: analizer.py  controller.py
src/core/parsers/: __init__.py  tg_parser.py
src/models/: constants.py  exceptions.py  mes_parser.py  parser.py
src/style/: style.qss
src/styles/: intro.qss
src/ui/: intro.py  window.py
src/ui/charts/: charts.py  linear_chart.py  square_chart.py
src/ui/dashboard/: dashboard.py
src/ui/dashboard/widgets/: control_panel.py  tab_widget.py
src/ui/dashboard/widgets/charts/: square_chart.py
src/ui/dashboard/widgets/tabs/: all.py  day.py  month.py  week.py  year.py
src/ui/intro/: intro.py
