[project]
name = "tganalizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Edplayer0",email = "edgarayusodev@proton.me"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyqt6 (>=6.10.2,<7.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
development = [
    "black (>=25.12.0,<26.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
